[gd_scene load_steps=5 format=2]

[ext_resource path="res://Cafe/Door.png" type="Texture" id=1]
[ext_resource path="res://Doors/door.gd" type="Script" id=2]
[ext_resource path="res://01_Sounds/EntranceBell.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 76, 84 )

[node name="Doors" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="Door" type="Sprite" parent="."]
position = Vector2( 846, -19 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 847, 47 )
shape = SubResource( 1 )

[node name="EntranceBell" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[connection signal="body_entered" from="." to="." method="_on_Doors_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Doors_body_exited"]
